--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "commit": "git-cz",
-    "test": "mocha __tests__/server.spec.js", 
+    "test": "mocha __tests__/server.spec.js",
     "lint": "./node_modules/.bin/eslint src __tests__",
     "lint:fix": "npm run lint -- --fix"
   },
@@ -33,11 +33,15 @@
     "commitizen": "4.2.6",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.31.0",
+    "ghooks": "2.0.4",
     "mocha": "10.2.0"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "pre-commit": "npm run lint"
     }
   }
 }
