--- a/package.json
+++ b/package.json
@@ -27,7 +27,18 @@
   "bugs": {
     "url": "https://github.com/simplymichael/express-graphql-server/issues"
   },
-  "homepage": "https://github.com/simplymichael/express-graphql-server#readme",
+  "homepage": "https://github.com/simplymichael/express-graphql-server#readme", 
+  "dependencies": {
+    "@graphql-tools/schema": "9.0.13",
+    "apollo-server": "3.11.1",
+    "apollo-server-express": "3.11.1",
+    "connect-redis": "6.1.3",
+    "express": "4.18.2",
+    "express-session": "1.17.3",
+    "graphql": "16.6.0",
+    "redis": "4.5.1",
+    "uuid": "9.0.0"
+  },
   "devDependencies": {
     "chai": "4.3.7",
     "commitizen": "4.2.6",
