--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "commit": "git-cz",
-    "test": "mocha __tests__/server.spec.js", 
+    "test": "mocha __tests__/server.spec.js",
     "test:watch": "npm test -- -w",
     "test:coverage": "nyc npm test",
     "lint": "./node_modules/.bin/eslint src __tests__",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "chai": "4.3.7",
+    "chai-http": "4.3.0",
     "commitizen": "4.2.6",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.31.0",
