--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
       "path": "node_modules/cz-conventional-changelog"
     },
     "ghooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint && npm run test:coverage"
     }
   }
 }
