--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "apollo-server": "3.11.1",
     "apollo-server-express": "3.11.1",
     "connect-redis": "6.1.3",
+    "cookie": "0.5.0",
     "express": "4.18.2",
     "express-session": "1.17.3",
     "graphql": "16.6.0",
@@ -58,7 +59,7 @@
     "ghooks": {
       "pre-commit": "npm run lint && npm run test:coverage"
     }
-  }, 
+  },
   "engines": {
     "node": ">=14.15.5"
   }
