--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "commit": "git-cz",
-    "test": "mocha __tests__/server.spec.js",
+    "test": "mocha __tests__/\"{,/**/}*.spec.js\"",
     "test:watch": "npm test -- -w",
     "test:coverage": "nyc npm test",
     "lint": "npx eslint src examples __tests__",
