--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "eslint": "8.31.0",
     "ghooks": "2.0.4",
     "mocha": "10.2.0",
-    "nyc": "15.1.0"
+    "nyc": "15.1.0",
+    "sinon": "15.0.1"
   },
   "config": {
     "commitizen": {
