--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "chai": "4.3.7",
+    "chai-as-promised": "7.1.1",
     "chai-http": "4.3.0",
     "commitizen": "4.2.6",
     "cz-conventional-changelog": "3.3.0",
