ci(github-actions): edit the .github/workflows/run-coverage-tests.yml
Edit the .github/workflows/run-coverage-tests.yml; Replace '$default_branch' with 'master'

--- a/.github/workflows/run-coverage-tests.yml
+++ b/.github/workflows/run-coverage-tests.yml
@@ -5,9 +5,9 @@ name: Code Coverage Test Runner
 
 on:
   push:
-    branches: [ $default-branch, develop, github-actions ]
+    branches: [ master, develop, github-actions ]
   pull_request:
-    branches: [ $default-branch, develop, github-actions ]
+    branches: [ master, develop, github-actions ]
 
 jobs:
   build:
