--- a/.github/workflows/run-coverage-tests.yml
+++ b/.github/workflows/run-coverage-tests.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Code Coverage Test Runner
+name: Node CI
 
 on:
   push:
@@ -28,5 +28,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run lint
-    - run: npm run build --if-present
+    - run: npm run build --if-present 
+    - name: Gather coverage report
     - run: npm run test:coverage
+    - name: Upload coverage report to codecov
+    - run: curl -Os https://uploader.codecov.io/latest/linux/codecov 
+    - run: chmod +x codecov 
+    - run: ./codecov
