--- a/.github/workflows/run-coverage-tests.yml
+++ b/.github/workflows/run-coverage-tests.yml
@@ -26,12 +26,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run lint
-    - run: npm run build --if-present 
+    - name: Install dependencies
+      run: npm ci
+    - name: Check code standards
+      run: npm run lint 
+    - name: Build
+      run: npm run build --if-present 
     - name: Gather coverage report
-    - run: npm run test:coverage
+      run: npm run test:coverage
     - name: Upload coverage report to codecov
-    - run: curl -Os https://uploader.codecov.io/latest/linux/codecov 
-    - run: chmod +x codecov 
-    - run: ./codecov
+      run: curl -Os https://uploader.codecov.io/latest/linux/codecov 
+      run: chmod +x codecov 
+      run: ./codecov
