--- a/.github/workflows/run-coverage-tests.yml
+++ b/.github/workflows/run-coverage-tests.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Gather coverage report
       run: npm run test:coverage
     - name: Upload coverage report to codecov
-      run: curl -Os https://uploader.codecov.io/latest/linux/codecov 
-      run: chmod +x codecov 
-      run: ./codecov
+      run: | 
+         curl -Os https://uploader.codecov.io/latest/linux/codecov 
+         chmod +x codecov 
+         ./codecov
