--- a/.github/workflows/run-coverage-tests.yml
+++ b/.github/workflows/run-coverage-tests.yml
@@ -39,4 +39,4 @@ jobs:
       run: | 
          curl -Os https://uploader.codecov.io/latest/linux/codecov 
          chmod +x codecov 
-         ./codecov
+         ./codecov -t ${{ secrets.CODECOV_TOKEN }}
