refactor(src/store/redis.js): refactor the redis factory creator function
Refactor the redis factory creator function to use redis-mock in development and testing, and redis
in production and staging

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ghooks": "2.0.4",
     "mocha": "10.2.0",
     "nyc": "15.1.0",
+    "redis-mock": "0.56.3",
     "sinon": "15.0.1"
   },
   "config": {
