--- a/.github/workflows/run-coverage-tests.yml
+++ b/.github/workflows/run-coverage-tests.yml
@@ -1,13 +1,13 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: ci
+name: tests
 
 on:
   push:
-    branches: [ master, develop, github-actions ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master, develop, github-actions ]
+    branches: [ master, develop ]
 
 jobs:
   build:
