ci(release-please): fix error with release-please github-actions workflow config
Fix error with release-please github-actions workflow configuration. The error reads thus: "Error:
release-please failed: Resource not accessible by integration"

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,3 +11,7 @@ jobs:
         with:
           release-type: node
           package-name: release-please-action
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
