--- a/.github/workflows/run-coverage-tests.yml
+++ b/.github/workflows/run-coverage-tests.yml
@@ -5,9 +5,9 @@ name: tests
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, develop, release ]
   pull_request:
-    branches: [ master, develop ]
+    branches: [ master, develop, release ]
 
 jobs:
   build:
